--- a/src/styles/color.css
+++ b/src/styles/color.css
@@ -1,10 +1,13 @@
 :root { 
 --indigo_200:#a1a4c1; 
+--light_green_A700_5b:#24ef035b; 
 --black_900:#000000; 
---indigo_A700:#1e1af9; 
 --deep_purple_A100_cc:#b29dffcc; 
---bluegray_100:#d9d9d9; 
+--light_green_700:#4cb726; 
 --deep_orange_A700:#f91a1a; 
+--bluegray_100:#d9d9d9; 
 --white_A700:#ffffff; 
+--green_A200_5b:#8cf7a35b; 
+--green_500:#35e446; 
 --gray_100:#f5f4f7; 
 }
