Code Synced by DhiWise

--- a/src/styles/color.css
+++ b/src/styles/color.css
@@ -3,16 +3,24 @@
 --bluegray_50:#eaecf0; 
 --black_900_b2:#000000b2; 
 --deep_purple_900:#2811b1; 
---blue_A700:#0061ff; 
 --black_900_5b:#0000005b; 
---gray_50:#f9fbff; 
+--blue_A700:#0061ff; 
+--gray_900:#0d1624; 
+--bluegray_100:#d9d9d9; 
+--blue_50:#e0ebff; 
 --green_500:#35e446; 
+--gray_50:#f9fbff; 
 --bluegray_900:#262b35; 
+--bluegray_800:#3d455b; 
 --black_900:#000000; 
 --bluegray_400:#74839d; 
+--bluegray_300:#9ea8ba; 
 --light_green_700:#4cb726; 
+--bluegray_200:#bac1ce; 
+--bluegray_101:#d6dae2; 
 --black_901:#090b0d; 
 --deep_orange_A700:#f91a1a; 
 --indigo_900:#0010a0; 
 --white_A700:#ffffff; 
+--gray_700_11:#55555511; 
 }
