Code Synced by DhiWise

--- a/src/styles/color.css
+++ b/src/styles/color.css
@@ -1,26 +1,26 @@
 :root { 
 --light_green_700_5b:#4cb8265b; 
---bluegray_50:#eaecf0; 
+--blue_900:#0000e1; 
 --black_900_b2:#000000b2; 
---deep_purple_900:#2811b1; 
+--light_blue_200:#6dcbff; 
 --black_900_5b:#0000005b; 
---blue_A700:#0061ff; 
---gray_900:#0d1624; 
---bluegray_100:#d9d9d9; 
---blue_50:#e0ebff; 
+--indigo_50:#dad4ff; 
+--gray_900_99:#09101d99; 
+--gray_900:#0d0140; 
+--indigo_51:#e3e7eb; 
+--red_200:#ff9393; 
+--gray_900_5b:#112a085b; 
 --green_500:#35e446; 
---gray_50:#f9fbff; 
+--gray_50:#fcfcfc; 
+--red_100:#f8cccc; 
 --bluegray_900:#262b35; 
---bluegray_800:#3d455b; 
 --black_900:#000000; 
+--bluegray_401:#78828a; 
 --bluegray_400:#74839d; 
---bluegray_300:#9ea8ba; 
 --light_green_700:#4cb726; 
---bluegray_200:#bac1ce; 
---bluegray_101:#d6dae2; 
---black_901:#090b0d; 
+--bluegray_300:#9ca4ab; 
 --deep_orange_A700:#f91a1a; 
---indigo_900:#0010a0; 
 --white_A700:#ffffff; 
---gray_700_11:#55555511; 
+--yellow_100:#fff8be; 
+--bluegray_901:#1f2c37; 
 }
